fixed display of color count.
at lower widths, text overlapped.

--- a/app/templates/src/docs/scss/_colors.scss
+++ b/app/templates/src/docs/scss/_colors.scss
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   background: #fff;
   max-width: 90em;
-  margin-left: 20px;
+  margin: 0 20px;
 }
 
 // color swatch, one per color defined in the site SCSS;
@@ -52,6 +52,9 @@
     color: #666;
     font-size: 10px;
     line-height: 16px;
-    float: right;
+
+    @include breakpoint($breakpoint--md) {
+      float: right;
+    }
   }
 }
